--- a/ship.html
+++ b/ship.html
@@ -392,7 +392,7 @@
 		    test();
 
 		};
-		script.src = window.l2dfolder+'/Skin'+skinID+'/live2d.js';
+		script.src = window.l2dfolder+'/skin'+skinID+'/live2d.js';
 
 		document.head.appendChild(script);
 	}
