edited hardy, z2. Edited shiplist

--- a/shiplist.html
+++ b/shiplist.html
@@ -128,7 +128,7 @@
 						<div class="imgdiv" style="background-color:#8cb3b8">';
 					}
 					text = text + '\
-							<a href="ship#'+actual_JSON[x].link+'"><img src="'+actual_JSON[x].icon+'"></a>\
+							<a href="ship#'+actual_JSON[x].link+'"><img src="'+actual_JSON[x].icon+'" style="height:100px;width: 100px"></a>\
 						</div>\
 						<div class="textdiv">\
 							<a href="ship#'+actual_JSON[x].link+'">'+actual_JSON[x].name+'</a>\
