added easy ship navigation

--- a/ship.html
+++ b/ship.html
@@ -75,7 +75,7 @@
 		</div>	
 	</a>
 
-	<select class="form-control" style="width:250px;background-color:#24252d;color:#ffffff;float:right;" id="shipList">
+	<select class="form-control" style="width:250px;background-color:#24252d;color:#ffffff;float:right;" id="shipList" onchange="onSelectShip()">
 
 	</select>
 
