--- a/shiplist.html
+++ b/shiplist.html
@@ -42,14 +42,14 @@
 			xobj.send(null);  
 		}
 		
-		function load(){
+		function load(type, element){
 			loadJSON(function(response) {
 				// Parse JSON string into object
 				var actual_JSON = JSON.parse(response);
 				var text = '';
 				for (var x in actual_JSON){
 
-					if (actual_JSON[x].shipType != "common"){
+					if (actual_JSON[x].shipType != type){
 						continue;
 					}
 
@@ -122,7 +122,7 @@
 					text = text + '\
 						</div>\
 						<div class="cornerdiv">'+x+'</div>';
-					if (actual_JSON[x].rarity == "Super Rare"){
+					if (actual_JSON[x].rarity == "Super Rare" || actual_JSON[x].rarity == "Priority"){
 						text = text + '\
 						<div class="imgdiv" style="background-color:#beb988">';
 					} else if (actual_JSON[x].rarity == "Elite"){
@@ -140,107 +140,14 @@
 						</div>\
 					</div>';
 				}
-				document.getElementById('listtable').innerHTML = text;
-			});
-		}
-
-		function loadPR(){
-			loadJSON(function(response) {
-				// Parse JSON string into object
-				var actual_JSON = JSON.parse(response);
-				var text = '';
-				for (var x in actual_JSON){
-
-					if (actual_JSON[x].shipType != "research"){
-						continue;
-					}
-
-					text = text + '\
-					<div class="maindiv">\
-						<div class="cornerdiv"">';
-						
-					if (actual_JSON[x].hull == "Aircraft Carrier" || actual_JSON[x].hull == "Light Aircraft Carrier" ){						
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Hull/cv.png" style="padding-left:3px">';
-					} else if (actual_JSON[x].hull == "Destroyer"){						
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Hull/dd.png" style="padding-left:3px">';
-					} else if (actual_JSON[x].hull == "Light Cruiser"){						
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Hull/cl.png" style="padding-left:3px">';
-					} else if (actual_JSON[x].hull == "Heavy Cruiser"){						
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Hull/ca.png" style="padding-left:3px">';
-					} else if (actual_JSON[x].hull == "Battleship" || actual_JSON[x].hull == "Battlecruiser" || actual_JSON[x].hull == "Monitor"){						
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Hull/bb.png" style="padding-left:3px">';
-					} else if (actual_JSON[x].hull == "Submarine"){						
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Hull/ss.png" style="padding-left:3px">';
-					} else if (actual_JSON[x].hull == "Repair Ship"){						
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Hull/ar.png" style="padding-left:3px">';
-					}
-					text = text + '\
-						</div>\
-						<div class="centerdiv">';
-					if (actual_JSON[x].navy == "Eagle Union") {
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Navy/uss_icon.png">';
-					} else if (actual_JSON[x].navy == "Sakura Empire") {
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Navy/ijn_icon.png">';
-					} else if (actual_JSON[x].navy == "Royal Navy") {
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Navy/hms_icon.png">';
-					} else if (actual_JSON[x].navy == "Ironblood") {
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Navy/kms_icon.png">';
-					} else if (actual_JSON[x].navy == "Dragon Empery" || actual_JSON[x].navy == "Dragon Empire" || actual_JSON[x].navy == "Eastern Radiance") {
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Navy/roc_icon.png">';
-					} else if (actual_JSON[x].navy == "Northern Parliament" || actual_JSON[x].navy == "North Union") {
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Navy/sn_icon.png">';
-					} else if (actual_JSON[x].navy == "Vichya Dominion") {
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Navy/mnf_icon.png">';
-					} else if (actual_JSON[x].navy == "Iris Libre") {
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Navy/ffnf_icon.png">';
-					} else if (actual_JSON[x].navy == "Universal") {
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Navy/univ_icon.png">';
-					} else if (actual_JSON[x].navy == "Neptunia") {
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Navy/hdn_icon.png">';
-					} else if (actual_JSON[x].navy == "Utawarerumono") {
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Navy/uwrr_icon.png">';
-					} else if (actual_JSON[x].navy == "Bilibili") {
-						text = text + '\
-							<img src="http://alg-wiki.com/Images/Navy/bili_icon.png">';
-					}
-					text = text + '\
-						</div>\
-						<div class="cornerdiv">'+x+'</div>';
-						text = text + '\
-						<div class="imgdiv" style="background-color:#beb988">';					
-					text = text + '\
-							<a href="ship#'+actual_JSON[x].link+'"><img src="'+actual_JSON[x].icon+'" style="height:100px;width: 100px"></a>\
-						</div>\
-						<div class="textdiv">\
-							<a href="ship#'+actual_JSON[x].link+'">'+actual_JSON[x].name+'</a>\
-						</div>\
-					</div>';
-				}
-				document.getElementById('listtablePR').innerHTML = text;
+				document.getElementById(element).innerHTML = text;
 			});
 		}
 		
 		window.onload = function() {
-			load();
-			loadPR();
+			load("common", "listtable");
+			load("research", "listtablePR");
+			load("collab", "listtableCollab");
 			addFooter();
 		    addSideBar();
 		    addHeader();
@@ -303,6 +210,32 @@
 	</tr>
 	<tr>
 		<td style="text-align:left;padding-bottom:10px;" id="listtablePR">
+			<div class="maindiv">
+				<div class="cornerdiv"">
+					<img src="http://alg-wiki.com/Images/Hull/ca.png" style="padding-left:3px">
+				</div>
+				<div class="centerdiv">
+					<img src="http://alg-wiki.com/Images/Navy/kms_icon.png">
+				</div>				
+				<div class="cornerdiv">242</div>
+				<div class="imgdiv" style="background-color:#b080b0">
+					<img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Ships/242_Admiral_Hipper/Icon/icon.png">
+				</div>
+				<div class="textdiv">Admiral Hipper</div>
+			</div>
+		</td>
+		
+	</tr>
+</table>
+
+<table class="wikitablewide" style="width:100%">
+	<tr style="text-align:center;background-color:#24252d;">				
+		<td>
+			Collab Ships
+		</td>
+	</tr>
+	<tr>
+		<td style="text-align:left;padding-bottom:10px;" id="listtableCollab">
 			<div class="maindiv">
 				<div class="cornerdiv"">
 					<img src="http://alg-wiki.com/Images/Hull/ca.png" style="padding-left:3px">
