added retrofit total

--- a/ship.html
+++ b/ship.html
@@ -952,6 +952,67 @@
 			</table>
 		</td>
 	</tr>
+	<tr>
+		<td style="height:1px;" align="center">
+			<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
+				<tr style="text-align:center">
+					<td style="background:#24252d;height:30px;width: 50%" colspan="4">
+						<b>
+							<font style="vertical-align: inherit;">Total Stats Gained</font>
+						</b>
+					</td>
+					<td style="background:#24252d;height:30px;width: 50%">
+						<b>
+							<font style="vertical-align: inherit;">Total Materials Needed</font>
+						</b>
+					</td>
+				</tr>
+				<tr>
+					<td style="width:17%%;padding-left:5px"><img src="Images/health_icon.png">&emsp;HP</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsHP"></td>
+					<td style="width:17%;padding-left:5px"><img src="Images/reload_icon.png">&emsp;Reload</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsReload"></td>
+					<td rowspan="7" id="totalMaterials"></td>
+				</tr>
+				<tr>
+					<td style="width:17%;padding-left:5px"><img src="Images/firepower_icon.png">&emsp;Firepower</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsFirepower"></td>
+					<td style="width:17%;padding-left:5px"><img src="Images/firepower_icon.png">&emsp;Main Gun</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsMainGun">+0%</td>
+				</tr>
+				<tr>
+					<td style="width:17%;padding-left:5px"><img src="Images/firepower_icon.png">&emsp;Auxiliary Gun</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsAuxGun">+0%</td>
+					<td style="width:17%;padding-left:5px"><img src="Images/torpedo_icon.png">&emsp;Torpedo</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsTorpedo"></td>
+				</tr>
+				<tr>
+					<td style="width:17%;padding-left:5px"><img src="Images/evasion_icon.png">&emsp;Evasion</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsEvasion"></td>
+					<td style="width:17%;padding-left:5px"><img src="Images/anti_air_icon.png">&emsp;Anti-air</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsAntiAir"></td>
+				</tr>
+				<tr>
+					<td style="width:17%;padding-left:5px"><img src="Images/aviation_icon.png">&emsp;Aviation</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsAviation"></td>
+					<td style="width:17%;padding-left:5px"><img src="Images/aviation_icon.png">&emsp;Fighter</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsFighter">+0%</td>
+				</tr>
+				<tr>
+					<td style="width:17%;padding-left:5px"><img src="Images/aviation_icon.png">&emsp;Dive Bomber</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsDiveBomber">+0%</td>
+					<td style="width:17%;padding-left:5px"><img src="Images/aviation_icon.png">&emsp;Torpedo Bomber</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsTorpedoBomber">+0%</td>
+				</tr>
+				<tr>
+					<td style="width:17%;padding-left:5px"><img src="Images/asw_icon.png">&emsp;ASW</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsASW"></td>
+					<td style="width:17%;padding-left:5px">Speed</td>
+					<td style="width:8%;text-align:center" id="shipRetroStatsSpeed"></td>
+				</tr>			
+			</table>
+		</td>
+	</tr>
 </table>
 
 </div>
