added custom web components

--- a/ship.html
+++ b/ship.html
@@ -51,6 +51,7 @@
 	<!-- Fetch Script -->
 	<script src="js/ship.js"></script>
 	<script src="js/util.js"></script>
+	<script src="components/CustomComponents.js" type="module"></script>
 
 
 </head>
