edited quincy desc

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ table.wikitablewide td {
                         <commented-ship-display ship="sendai" comment="Drop 11-3"></commented-ship-display>
                         <commented-ship-display ship="columbia" comment="Drop 11-4"></commented-ship-display>
                         <commented-ship-display ship="astoria" comment="3-star SP3"></commented-ship-display>
-                        <commented-ship-display ship="quincy" comment="Login Daily|3 days"></commented-ship-display>
+                        <commented-ship-display ship="quincy" comment="Login Daily 3 days"></commented-ship-display>
                         <commented-ship-display ship="vincennes" comment="Complete Event Mission"></commented-ship-display>
                         <commented-ship-display ship="kirishima" comment="Login once on event duration"></commented-ship-display>
                     </td>
