added en/jp twitter feeds

--- a/index.html
+++ b/index.html
@@ -214,6 +214,30 @@ table.wikitablewide td {
                     </td>
                 </tr>
             </table>
+
+             <table class="wikitablewide" style="width:100%">
+                <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
+                    <td style="width: 50%; position: relative;">
+                        JP Twitter
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a class="twitter-timeline" data-height="600" data-theme="dark" data-link-color="#2B7BB9" href="https://twitter.com/azurlane_staff?ref_src=twsrc%5Etfw">Tweets by azurlane_staff</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </td>
+            </table>
+
+            <table class="wikitablewide" style="width:100%">
+                <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
+                    <td style="width: 50%; position: relative;">
+                        EN Twitter
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a class="twitter-timeline" data-height="600" data-theme="dark" data-link-color="#2B7BB9" href="https://twitter.com/AzurLane_EN?ref_src=twsrc%5Etfw">Tweets by AzurLane_EN</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </td>
+            </table>
                         
 
             <!-- Content -->
