--- a/index.html
+++ b/index.html
@@ -103,10 +103,8 @@ table.wikitablewide td {
                 </tr>
                 <tr style="text-align: center;">
                     <td>
-                        <img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Event/fjord.png">
-                        <img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Event/fjord_hunter.png">
-                        <img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Event/fjord_hardy.png">
-                        <img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Event/hope_.png">
+                        <img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Event/world_13.png">
+                        <img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Event/cygnet_maid_skin.png">
                     </td>
                     <td>
                         <img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Event/moonlit_overture.png">
@@ -126,9 +124,8 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="hardy" comment="Quest Reward|Construction"></commented-ship-display>
-                        <commented-ship-display ship="hunter" comment="Provisional"></commented-ship-display>
-                        <commented-ship-display ship="z2" comment="Drop|Construction"></commented-ship-display>
+                        <commented-ship-display ship="dewey" comment="Drop in 13-3"></commented-ship-display>
+                        <commented-ship-display ship="bunker_hill" comment="Drop in 13-4"></commented-ship-display>
                     </td>
                     <td>
                         <commented-ship-display ship="agano" comment="Drop 11-2"></commented-ship-display>
