--- a/index.html
+++ b/index.html
@@ -92,12 +92,11 @@ table.wikitablewide td {
             <table class="wikitablewide" style="width:100%">
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
                     <td style="width: 50%; position: relative;">
-                        <img src="Images/jp.png" style="width: 30px; height: auto; position: absolute; right: 10px; top: 12px">
-                        <img src="Images/cn.png" style="width: 30px; height: auto; position: absolute; right: 48px; top: 12px">
+                        <font style="position: absolute; right: 10px; top: 7px; text-shadow: 1px 1px 10px red">JP/CN</font>
                         Event
                     </td>
                     <td style="width: 50%; position: relative;">
-                        <img src="Images/us.png" style="width: 30px; height: auto; position: absolute; left: 10px; top: 12px">
+                        <font style="position: absolute; left: 10px; top: 7px; text-shadow: 1px 1px 10px blue">EN</font>
                         Event
                     </td>
                 </tr>
@@ -113,19 +112,18 @@ table.wikitablewide td {
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
                     <td style="width: 50%; position: relative;">
-                        <img src="Images/jp.png" style="width: 30px; height: auto; position: absolute; right: 10px; top: 12px">
-                        <img src="Images/cn.png" style="width: 30px; height: auto; position: absolute; right: 48px; top: 12px">
+                        <font style="position: absolute; right: 10px; top: 7px; text-shadow: 1px 1px 10px red">JP/CN</font>
                         Ship
                     </td>
                     <td style="width: 50%; position: relative;">
-                        <img src="Images/us.png" style="width: 30px; height: auto; position: absolute; left: 10px; top: 12px">
+                        <font style="position: absolute; left: 10px; top: 7px; text-shadow: 1px 1px 10px blue">EN</font>
                         Ship
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="dewey" comment="Drop in 13-3"></commented-ship-display>
-                        <commented-ship-display ship="bunker_hill" comment="Drop in 13-4"></commented-ship-display>
+                        <commented-ship-display ship="dewey" comment="Drop in 13-3" new="true"></commented-ship-display>
+                        <commented-ship-display ship="bunker_hill" comment="Drop in 13-4" new="true"></commented-ship-display>
                     </td>
                     <td>
                         <commented-ship-display ship="agano" comment="Drop 11-2"></commented-ship-display>
@@ -139,12 +137,11 @@ table.wikitablewide td {
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
                     <td style="width: 50%; position: relative;">
-                        <img src="Images/jp.png" style="width: 30px; height: auto; position: absolute; right: 10px; top: 12px">
-                        <img src="Images/cn.png" style="width: 30px; height: auto; position: absolute; right: 48px; top: 12px">
+                        <font style="position: absolute; right: 10px; top: 7px; text-shadow: 1px 1px 10px red">JP/CN</font>
                         Retrofit
                     </td>
                     <td style="width: 50%; position: relative;">
-                        <img src="Images/us.png" style="width: 30px; height: auto; position: absolute; left: 10px; top: 12px">
+                       <font style="position: absolute; left: 10px; top: 7px; text-shadow: 1px 1px 10px blue">EN</font>
                         Retrofit
                     </td>
                 </tr>
@@ -158,17 +155,20 @@ table.wikitablewide td {
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
                     <td style="width: 50%; position: relative;">
-                        <img src="Images/jp.png" style="width: 30px; height: auto; position: absolute; right: 10px; top: 12px">
-                        <img src="Images/cn.png" style="width: 30px; height: auto; position: absolute; right: 48px; top: 12px">
+                        <font style="position: absolute; right: 10px; top: 7px; text-shadow: 1px 1px 10px red">JP/CN</font>
                         Skin
                     </td>
                     <td style="width: 50%; position: relative;">
-                        <img src="Images/us.png" style="width: 30px; height: auto; position: absolute; left: 10px; top: 12px">
+                        <font style="position: absolute; left: 10px; top: 7px; text-shadow: 1px 1px 10px blue">EN</font>
                         Skin
                     </td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>
+                        <commented-ship-display ship="cygnet" skin="6" skin-bg="true" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="yuugure" skin="2" skin-bg="true" discount="20% OFF"></commented-ship-display>
+                        <commented-ship-display ship="shiratsuyu" skin="2" skin-bg="true" discount="20% OFF"></commented-ship-display>
+                    </td>
                     <td>
                         <commented-ship-display ship="astoria" skin="2" skin-bg="true" skin-limited="true"></commented-ship-display>
                         <commented-ship-display ship="quincy" skin="2" skin-bg="true" skin-limited="true"></commented-ship-display>
@@ -178,12 +178,11 @@ table.wikitablewide td {
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
                     <td style="width: 50%; position: relative;">
-                        <img src="Images/jp.png" style="width: 30px; height: auto; position: absolute; right: 10px; top: 12px">
-                        <img src="Images/cn.png" style="width: 30px; height: auto; position: absolute; right: 48px; top: 12px">
+                        <font style="position: absolute; right: 10px; top: 7px; text-shadow: 1px 1px 10px red">JP/CN</font>
                         Equipment
                     </td>
                     <td style="width: 50%; position: relative;">
-                        <img src="Images/us.png" style="width: 30px; height: auto; position: absolute; left: 10px; top: 12px">
+                        <font style="position: absolute; left: 10px; top: 7px; text-shadow: 1px 1px 10px blue">EN</font>
                         Equipment
                     </td>
                 </tr>
@@ -193,12 +192,11 @@ table.wikitablewide td {
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
                     <td style="width: 50%; position: relative;">
-                        <img src="Images/jp.png" style="width: 30px; height: auto; position: absolute; right: 10px; top: 12px">
-                        <img src="Images/cn.png" style="width: 30px; height: auto; position: absolute; right: 48px; top: 12px">
+                        <font style="position: absolute; right: 10px; top: 7px; text-shadow: 1px 1px 10px red">JP/CN</font>
                         Furniture
                     </td>
                     <td style="width: 50%; position: relative;">
-                        <img src="Images/us.png" style="width: 30px; height: auto; position: absolute; left: 10px; top: 12px">
+                        <font style="position: absolute; left: 10px; top: 7px; text-shadow: 1px 1px 10px blue">EN</font>
                         Furniture
                     </td>
                 </tr>
