Added i-13 sub range

--- a/ship.html
+++ b/ship.html
@@ -549,8 +549,7 @@
 					<td style="width:15%;text-align:center" id="shipStatsRange" colspan="2"></td>
 				</tr>
 				<tr id="sub3" style="display: none;">
-					<td colspan="4" align="center" style="line-height: 180px">
-						<img src="Images/arrow_left.png" style="display: inline-block; line-height: normal; vertical-align: middle; cursor: pointer;">
+					<td colspan="4" style="overflow-x: scroll; white-space: nowrap;" id="subRange">
 						<table class="wikitablewide" style="text-align:left;margin:0 0 0 0; display: inline-block; line-height: normal; vertical-align: middle;">
 							<tr>
 								<td style="height: 25px; width: 25px" id="range_a1"></td>
@@ -583,7 +582,7 @@
 								<td style="height: 25px; width: 25px" id="range_a4"></td>
 								<td style="height: 25px; width: 25px" id="range_b4"></td>
 								<td style="height: 25px; width: 25px" id="range_c4"></td>
-								<td style="height: 25px; width: 25px" id="range_d4"><img src="Images/mark_sub.png" style="width: 25px; height: auto;"></td>
+								<td style="height: 25px; width: 25px" id="range_d4"><img src="Images/mark_sub.png" style="width: 23px; height: auto;"></td>
 								<td style="height: 25px; width: 25px" id="range_e4"></td>
 								<td style="height: 25px; width: 25px" id="range_f4"></td>
 								<td style="height: 25px; width: 25px" id="range_g4"></td>
@@ -616,7 +615,6 @@
 								<td style="height: 25px; width: 25px" id="range_g7"></td>
 							</tr>
 						</table>
-						<img src="Images/arrow_right.png" style="display: inline-block; line-height: normal; vertical-align: middle; cursor: pointer;">
 					</td>
 				</tr>
 			</table>
