fixed ship hull icons

--- a/ship.html
+++ b/ship.html
@@ -132,7 +132,7 @@
 				</b>
 			</td>
 			<td style="padding-left: 0px;padding-right: 0px;">
-				<img width="30" height="19" id="shipHullIcon">
+				<img style="height: auto; width: 35px" id="shipHullIcon">
 				<font style="vertical-align: inherit;"  id="shipHull"></font>
 			</td>
 			<td>
