--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@ table.wikitablewide td {
                 </tr>
                 <tr style="text-align: center;">
                     <td>
-                        <img src="http://media.alg-wiki.com/Event/world_13.png">
-                        <img src="http://media.alg-wiki.com/Event/cygnet_maid_skin.png">
+                        <img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Event/world_13.png">
+                        <img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Event/cygnet_maid_skin.png">
                     </td>
                     <td>
-                        <img src="http://media.alg-wiki.com/Event/moonlit_overture.png">
-                        <img src="http://media.alg-wiki.com/Event/kirishima_ninjutsu_class.png">
+                        <img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Event/moonlit_overture.png">
+                        <img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Event/kirishima_ninjutsu_class.png">
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -202,10 +202,10 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <img src="http://media.alg-wiki.com/Event/ski_resort.png">
+                        <img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Event/ski_resort.png">
                     </td>
                     <td>
-                        <img src="http://media.alg-wiki.com/Event/cat_cafe_dorm.png">
+                        <img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/Event/cat_cafe_dorm.png">
                     </td>
                 </tr>
             </table>
