--- a/storylist.html
+++ b/storylist.html
@@ -127,7 +127,7 @@
 
                     text = text + '\
                     <a href="story#'+actual_JSON[x].link+'">\
-                        <div class="charBG" style="background-image: url(\'http://media.alg-wiki.com/General/story_'+actual_JSON[x].icon+'_folder.png\')">\
+                        <div class="charBG" style="background-image: url(\'https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/story_'+actual_JSON[x].icon+'_folder.png\')">\
                             <div class="mainTextChapCount"><b>'+actual_JSON[x].chapterNumbers+'/'+actual_JSON[x].chapterNumbers+'</b></div>\
                             <div class="mainTextTitle"><b>'+actual_JSON[x].title+'</b></div>\
                         </div>\
