moved media to temporary cdn

--- a/story.html
+++ b/story.html
@@ -85,8 +85,8 @@
             loadJSON(function(response) {
                 // Parse JSON string into object
                 var actual_JSON = JSON.parse(response);
-                var bg = "https://s3.us-east-2.amazonaws.com/alg-wiki.com/Scene/240p/";
-                var icon = "https://s3.us-east-2.amazonaws.com/alg-wiki.com/BadgeIcons/";
+                var bg = "https://deo68x5sknl6a.cloudfront.net/Scene/240p/";
+                var icon = "https://deo68x5sknl6a.cloudfront.net/BadgeIcons/";
 
 
                 var text = '\
