fixed stat icon sizing

--- a/ship.html
+++ b/ship.html
@@ -184,19 +184,19 @@
 			<td colspan="4" style="text-align:left;height:1px;">
 				<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
 					<tr>
-						<td style="width:70%"><img src="Images/firepower_icon.png">&emsp;Firepower</td>
+						<td style="width:70%"><img src="Images/firepower_icon.png" style="height:auto;width:25px;">&emsp;Firepower</td>
 						<td style="padding-left:5px" id="shipEnhancementFirepower"></td>
 					</tr>
 					<tr>
-						<td style="width:70%"><img src="Images/torpedo_icon.png">&emsp;Torpedo</td>
+						<td style="width:70%"><img src="Images/torpedo_icon.png" style="height:auto;width:25px;">&emsp;Torpedo</td>
 						<td style="padding-left:5px" id="shipEnhancementTorpedo"></td>
 					</tr>
 					<tr>
-						<td style="width:70%"><img src="Images/aviation_icon.png">&emsp;Aviation</td>
+						<td style="width:70%"><img src="Images/aviation_icon.png" style="height:auto;width:25px;">&emsp;Aviation</td>
 						<td style="padding-left:5px" id="shipEnhancementAviation"></td>
 					</tr>
 					<tr>
-						<td style="width:70%"><img src="Images/reload_icon.png">&emsp;Reload</td>
+						<td style="width:70%"><img src="Images/reload_icon.png" style="height:auto;width:25px;">&emsp;Reload</td>
 						<td style="padding-left:5px" id="shipEnhancementReload"></td>
 					</tr>
 				</table>
@@ -444,27 +444,27 @@
 		</td>
 	</tr>
 	<tr>
-		<td style="width:70%;padding-left:5px"><img src="Images/health_icon.png">&emsp;HP</td>
+		<td style="width:70%;padding-left:5px"><img src="Images/health_icon.png" style="height:auto;width:25px;">&emsp;HP</td>
 		<td style="padding-left:5px" id="shipParameterHP"></td>
 	</tr>
 	<tr>
-		<td style="width:70%;padding-left:5px"><img src="Images/anti_air_icon.png">&emsp;Anti-air</td>
+		<td style="width:70%;padding-left:5px"><img src="Images/anti_air_icon.png" style="height:auto;width:25px;">&emsp;Anti-air</td>
 		<td style="padding-left:5px" id="shipParameterAntiAir"></td>
 	</tr>
 	<tr>
-		<td style="width:70%;padding-left:5px"><img src="Images/evasion_icon.png">&emsp;Evasion</td>
+		<td style="width:70%;padding-left:5px"><img src="Images/evasion_icon.png" style="height:auto;width:25px;">&emsp;Evasion</td>
 		<td style="padding-left:5px" id="shipParameterEvasion"></td>
 	</tr>
 	<tr>
-		<td style="width:70%;padding-left:5px"><img src="Images/aviation_icon.png">&emsp;Aviation</td>
+		<td style="width:70%;padding-left:5px"><img src="Images/aviation_icon.png" style="height:auto;width:25px;">&emsp;Aviation</td>
 		<td style="padding-left:5px" id="shipParameterAviation"></td>
 	</tr>
 	<tr>
-		<td style="width:70%;padding-left:5px"><img src="Images/torpedo_icon.png">&emsp;Torpedo</td>
+		<td style="width:70%;padding-left:5px"><img src="Images/torpedo_icon.png" style="height:auto;width:25px;">&emsp;Torpedo</td>
 		<td style="padding-left:5px" id="shipParameterTorpedo"></td>
 	</tr>
 	<tr>
-		<td style="width:70%;padding-left:5px"><img src="Images/firepower_icon.png">&emsp;Firepower</td>
+		<td style="width:70%;padding-left:5px"><img src="Images/firepower_icon.png" style="height:auto;width:25px;">&emsp;Firepower</td>
 		<td style="padding-left:5px" id="shipParameterFirepower"></td>
 	</tr>
 	<tr>
